--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
 <div class="botoes">
+    .botao {
+        font-family: "Crakra Petch", sans-serif;
+        background-color: var(--botao-inativo);
+        color: var(--branco);
+        display: flex;
+        justify-content: center;
+        padding: 1em;
+        font-size: 18px;
+        align-items: center;
+        width: 100%;
+    
         <button class="botao">Cursos na Alura</button>
         <button class="botao">Criar projetos em Javascript</button>
         <button class="botao">Criar um portfolio</button>
@@ -19,3 +30,4 @@
 
 </body>
 </html>
+<h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
